Change tag name's pattern